# tracking_drone

Onboard-SDK-ROS/dji_sdk/launch/: sdk_TX2_1.launch
darknet_ros/darknet_ros/: CMakeLists.txt
darknet_ros/darknet_ros/config/: srtp_yolov3_tiny.yaml  yolov3-voc.yaml
darknet_ros/darknet_ros/launch/: yolo_v3.launch
darknet_ros/darknet_ros/yolo_network_config/cfg/: yolov3-tiny.cfg
dist_detect/launch/: dist_detection.launch
dist_detect/src/: calc_extrinsic.py  projection.py
gimbal_driver/: CMakeLists.txt  package.xml  setup.py
gimbal_driver/src/: gimbal_driver.py
gimbalctr/: CMakeLists.txt  package.xml
gimbalctr/include/mk_gimbalctr/: mk_gimbalCtr.h
gimbalctr/launch/: mk_gimbalctr.launch
gimbalctr/src/: mk_gimbalActions.cpp  mk_gimbalCtr.cpp  mk_gimbalCtr_main.cpp
iarc_missions/: CMakeLists.txt  package.xml
iarc_missions/launch/: audio_test.launch  gimbal.launch  iarc_mission.launch  qscan_test.launch
iarc_missions/src/: iarc_mission.cpp  iarc_mission_node.cpp
src/Guidance-SDK-ROS-master/: CMakeLists.txt
src/Onboard-SDK-ROS/dji_sdk/launch/: sdk_TX2_2.launch
src/darknet_ros/darknet_ros/config/: ros.yaml
src/darknet_ros/darknet_ros/launch/: darknet_ros.launch
src/dist_detect/: CMakeLists.txt  package.xml  setup.py
src/dist_detect/src/: dist_detect.py  transform.py
src/gimbal_driver/: gimbal_driver.launch
src/iarc_missions/include/iarc_missions/: IARCMission.h
src/iarc_missions/launch/: visual_test.launch
src/iarc_missions/src/: iarc_mission_node.cpp
src/iarc_msgs/msg/: Pose.msg  RoiPos.msg
src/tracking_sim/: package.xml
src/tracking_sim/launch/: tracking_sim_demo.launch
src/usb_cam/launch/: usb_cam-test.launch
tracking/src/: tracking_test.cpp
tracking_sim/: CMakeLists.txt
tracking_sim/src/: turtle_tf_listener.cpp
(+3 files in other folders)
